--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/styled": "^11.10.5",
 		"@rive-app/react-canvas": "^3.0.35",
 		"antd": "^5.3.0",
+		"cookies-next": "^4.1.0",
 		"eslint": "8.29.0",
 		"eslint-config-next": "13.0.6",
 		"framer-motion": "^7.9.1",
