--- a/package.json
+++ b/package.json
@@ -12,25 +12,33 @@
 		"@chakra-ui/react": "^2.4.9",
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
+		"@iconify/react": "^4.1.1",
 		"@rive-app/react-canvas": "^3.0.35",
 		"antd": "^5.3.0",
 		"cookies-next": "^4.1.0",
 		"eslint": "8.29.0",
 		"eslint-config-next": "13.0.6",
+		"flowbite-react": "^0.7.2",
 		"framer-motion": "^7.9.1",
 		"locomotive-scroll": "^4.1.4",
 		"next": "13.0.6",
 		"next-pwa": "^5.6.0",
 		"react": "18.2.0",
+		"react-confirm-alert": "^3.0.6",
 		"react-dom": "18.2.0",
 		"react-fast-marquee": "^1.3.5",
 		"react-icons": "^4.7.1",
 		"react-locomotive-scroll": "^0.2.2",
 		"rive-react": "^3.0.35",
 		"sharp": "^0.31.3",
-		"swiper": "^8.4.5"
+		"swiper": "^8.4.5",
+		"ua-parser-js": "^1.0.37"
 	},
 	"volta": {
 		"node": "16.13.1"
+	},
+	"devDependencies": {
+		"@types/ua-parser-js": "^0.7.39",
+		"tailwindcss": "^3.2.4"
 	}
 }
