--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 		"@iconify/react": "^4.1.1",
 		"@rive-app/react-canvas": "^3.0.35",
 		"antd": "^5.3.0",
+		"axios": "^1.6.2",
 		"cookies-next": "^4.1.0",
 		"eslint": "8.29.0",
 		"eslint-config-next": "13.0.6",
+		"firebase": "^10.7.1",
 		"flowbite-react": "^0.7.2",
 		"framer-motion": "^7.9.1",
 		"locomotive-scroll": "^4.1.4",
