--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"sharp": "^0.31.3",
 		"swiper": "^8.4.5",
 		"ua-parser-js": "^1.0.37",
+		"use-sound": "^4.0.1",
 		"workbox": "^0.0.0"
 	},
 	"volta": {
@@ -43,6 +44,7 @@
 	},
 	"devDependencies": {
 		"@types/ua-parser-js": "^0.7.39",
+		"file-loader": "^6.2.0",
 		"tailwindcss": "^3.2.4"
 	}
 }
