--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
 		"@iconify/react": "^4.1.1",
+		"@pwabuilder/pwaupdate": "^0.2.1",
 		"@rive-app/react-canvas": "^3.0.35",
 		"antd": "^5.3.0",
 		"axios": "^1.6.2",
