--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 		"swiper": "^8.4.5",
 		"ua-parser-js": "^1.0.37",
 		"use-sound": "^4.0.1",
-		"workbox": "^0.0.0"
+		"workbox": "^0.0.0",
+		"workbox-precaching": "^7.0.0"
 	},
 	"volta": {
 		"node": "16.13.1"
